--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,3 +17,15 @@
   background-position-x: center;
   filter: blur(0px);
 }
+.section__2 {
+  background-image: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 80%),
+    url("/assets/background/bg-section-1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: calc(100vw-8em);
+  /* height: calc(100vw * 0.6 * 723 / 800); */
+  background-position-y: center;
+  background-size: 80% 100%;
+  background-position-x: 100%;
+  margin: 4em;
+}
