--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,12 +18,7 @@
 
 body {font-family: Montserrat;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
 }
 
 /* Strike */
