--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,16 @@
 .main__div {
-  background-image: url("/assets/background/bg-image-1.png");
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.5) 100%
+    ),
+    url("/assets/background/bg-image-1.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
   background-position-x: center;
+  background-position-y: bottom;
   /* height: calc(100vw * 847 / 1400); */
 }
 .main__div__2 {
@@ -15,6 +21,7 @@
   width: 100vw;
   height: 100vh;
   background-position-x: center;
+  background-position-y: top;
   filter: blur(0px);
 }
 .section__2 {
