--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,7 @@
     url("/assets/background/bg-image-1.png");
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-position-x: center;
   background-position-y: bottom;
@@ -23,7 +23,7 @@
     url("/assets/background/bg-image-2.png");
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-position-x: center;
   background-position-y: top;
@@ -40,15 +40,45 @@
       url("/assets/background/bg-image-2.png");
   }
 }
-.section__2 {
-  background-image: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 80%),
+.section__1 {
+  background-image: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 1) 30%,
+      rgba(255, 255, 255, 0.2) 80%,
+      rgba(255, 255, 255, 0) 100%
+    ),
     url("/assets/background/bg-section-1.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: calc(100vw-8em);
-  /* height: calc(100vw * 0.6 * 723 / 800); */
+  height: calc((100vw * 0.6 * 723 / 1180)+8em);
   background-position-y: center;
-  background-size: 80% 100%;
+  /* background-size: 80% 100%; */
   background-position-x: 100%;
   margin: 4em;
+}
+@media only screen and (max-width: 600px) {
+  .section__1 {
+    background-image: none;
+    margin: 1em;
+    height: auto;
+  }
+}
+
+.section__2 {
+  background-image: url("/assets/background/bg-section-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  /* height: 100vh; */
+  background-position-x: center;
+  background-position-y: top;
+}
+
+@media only screen and (max-width: 600px) {
+  .section__2 {
+    background-image: url("/assets/background/bg-section-2-mobile.png");
+    height: auto !important ;
+  }
 }
