--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -10,6 +10,7 @@
 }
 @media only screen and (max-width: 600px) {
   .main__div {
+    background-image: url("/assets/background/bg-weddings_made_easy-mobile.png");
     height: auto !important ;
     background-attachment: fixed;
     background-size: auto 100vh;
