--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -12,8 +12,9 @@
   .main__div {
     background-image: url("/assets/background/bg-weddings_made_easy-mobile.png");
     height: auto !important ;
-    background-attachment: fixed;
+    /* background-attachment: scroll; */
     background-size: auto 100vh;
+    background-position: top;
   }
 }
 .customers_div {
