--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -23,6 +24,9 @@ html {
   .font-outline-1 {
     -webkit-text-stroke: 1px rgba(132, 0, 50, 0.3);
   }
+  .font-outline-3-black {
+    -webkit-text-stroke: 2px #000000; /* Black stroke with 3px width */
+  }
 }
 
 body {
@@ -30,6 +34,13 @@ body {
   /* color: rgb(var(--foreground-rgb)); */
   color: rgb(0, 0, 0);
   background: white;
+}
+
+/* Font */
+.poiret-one-regular {
+  font-family: "Poiret One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* Backround Image */
